<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ALLO TAXI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="client">Client</string>
    <string name="app_insciptionn"><u>Inscription</u></string>
    <string name="admin">Administrateur</string>
    <string name="annuler">Annuler</string>
    <string name="google_places_api_key">AIzaSyC5mTsDhjayzCqXH87ggEYsfswR1cStfX8</string>
    <!-- Inscription -->
    <string name="app_nom">Nom</string>
    <string name="app_prenom">Prenom</string>
    <string name="app_email">Email</string>
    <string name="app_pwd">Password</string>
    <string name="str_btn_chart">Pie Chart</string>
    <string name="app_tel">Tel</string>
    <string name="app_valider">Valider</string>
    <string name="app_annuler">Annuler</string>
    <string name="app_confirmation">Password Confirmation</string>
    <string name="app_conf">Validation</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Acceuil</item>
        <item>Realite Augmentée </item>
        <item>Map</item>
        <item>Favoris</item>
        <item>Taxi</item>
        <item>Deconnexion</item>
        <item>Aide</item>
    </string-array>
    <string-array name="nav_drawer_itemsadmin">
        <item>Acceuil</item>
        <item>Recherche</item>
        <item>Map</item>
        <item>Fidelite</item>
        <item>Taxi</item>
        <item>Deconnexion</item>
        <item>Aide</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/taxi_icon</item>
        <item>@drawable/ic_logout</item>
        <item>@drawable/ic_help</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_detail">DetailActivity</string>

</resources>