<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/bb"
        tools:context=".MainActivity" >

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="38dp"
            android:drawableLeft="@drawable/ps"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="Password" />

        <Button
            android:id="@+id/button1"
            style="@style/dialog_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="25dp"
            android:text="Connexion" />

        <Button
            android:id="@+id/button2"
            style="@style/dialog_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignRight="@+id/editText2"
            android:text="@string/annuler" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="153dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/us"
            android:ems="10"
            android:hint="Login" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/button1"
            android:layout_marginTop="14dp" >

            <RadioButton
                android:id="@+id/id_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/client" />

            <RadioButton
                android:id="@+id/id_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/radioSex"
            android:layout_alignParentRight="true"
            android:layout_marginRight="27dp"
            android:text="@string/app_insciptionn"
            android:textColor="#ff0099cc"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText1"
            android:layout_alignRight="@+id/radioSex"
            android:layout_marginBottom="72dp"
            android:text="ALL TAXI"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</ScrollView>